# CanadianExperience

CanadianExperienceLib/: Drawable.cpp  Drawable.h  MachineDrawable.cpp  MachineDrawable.h  PictureFactory.cpp  PictureFactory.h  SpartyFactory.cpp
MachineLib/: CMakeLists.txt  Component.cpp  Component.h  Instrument.cpp  Instrument.h  Lever.cpp  Lever.h  Machine.cpp  Machine.h  Machine1Factory.cpp  Machine1Factory.h  MachineSystem.h  MachineSystemFactory.cpp  MachineSystemImplemented.cpp  MachineSystemImplemented.h  Motor.cpp  Motor.h  Peg.cpp  Peg.h  PegWheel.cpp  PegWheel.h  Polygon.cpp  Polygon.h  Pulley.cpp  Pulley.h  RotationSink.cpp  RotationSink.h  RotationSource.cpp  RotationSource.h  Shape.cpp  Shape.h
MachineTests/: ComponentTest.cpp  MachineTest.cpp
